<resources>
    <string name="app_name">EcoExT</string>
    <string name="button">Button</string>
    <string name="logo">logo</string>
    <string name="username_or_email">Username or Email</string>
    <string name="facebook_app_id">1002325056617849</string>
    <string name="fb_login_protocol_scheme">fb1002325056617849</string>
    <string name="firebase_error_login">An Error has Occurred while trying to access Firebase</string>
    <string name="login_error">Error Occurred</string>
    <string name="login_cancelled">Login Cancelled</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Notification Here</string>

    <!-- Keyboard Strings -->
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="btn_dot">.</string>
    <string name="copyright">Created by EcoExT. All Rights Reserved</string>


</resources>
